--- a/nhom2_addons/school_management/views/views.xml
+++ b/nhom2_addons/school_management/views/views.xml
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <data>
-        <record id="my_term_form_view" model="ir.ui.view">
-            <field name="name">my.term.form.view</field>
-            <field name="model">my.term</field>
+        <record id="my_course_form_view" model="ir.ui.view">
+            <field name="name">my.course.form.view</field>
+            <field name="model">my.course</field>
             <field name="arch" type="xml">
                 <form>
                     <sheet>
                         <div class="oe_title">
-                            <label for="mahp"/>
-                            <h3><field name="mahp"/></h3>
+                            <label for="coursecode"/>
+                            <h3><field name="coursecode"/></h3>
                         </div>
                         <group>
                             <group>
-                                <field name="kyhoc"/>
-                                <field name="tenhp"/>
-                                <field name="sotc"/>
-                                <field name="loaihp"/>
-                                <field name="sotlt"/>
-                                <field name="sotth"/>
+                                <field name="semester"/>
+                                <field name="coursename"/>
+                                <field name="credits"/>
+                                <field name="coursetype"/>
+                                <field name="theoretical"/>
+                                <field name="practice"/>
                             </group>
                             <group>
-                                <field name="tgbd"/>
-                                <field name="tgkt"/>
-                                <field name="lich"/>
-                                <field name="phong"/>
-                                <field name="ngaythi"/>
-                                <field name="ghichu"/>
+                                <field name="total"/>
+                                <field name="starttime"/>
+                                <field name="endtime"/>
+                                <field name="schedule"/>
+                                <field name="room"/>
+                                <field name="examday"/>
+                                <field name="note"/>
                             </group>
                         </group>
                     </sheet>
@@ -34,42 +35,43 @@
             </field>
         </record>
 
-        <record id="my_term_tree_view" model="ir.ui.view">
-            <field name="name">my.term.tree.view</field>
-            <field name="model">my.term</field>
+        <record id="my_course_tree_view" model="ir.ui.view">
+            <field name="name">my.course.tree.view</field>
+            <field name="model">my.course</field>
             <field name="arch" type="xml">
-                <tree string="Term" default_order="create_date asc">
-                    <field name="mahp"/>
-                    <field name="kyhoc"/>
-                    <field name="tenhp"/>
-                    <field name="sotc"/>
-                    <field name="loaihp"/>
-                    <field name="sotlt"/>
-                    <field name="sotth"/>
-                    <field name="tgbd"/>
-                    <field name="tgkt"/>
-                    <field name="lich"/>
-                    <field name="phong"/>
-                    <field name="ngaythi"/>
-                    <field name="ghichu"/>
+                <tree string="course" default_order="create_date asc">
+                    <field name="coursecode"/>
+                    <field name="semester"/>
+                    <field name="coursename"/>
+                    <field name="credits"/>
+                    <field name="coursetype"/>
+                    <field name="theoretical"/>
+                    <field name="practice"/>
+                    <field name="total"/>
+                    <field name="starttime"/>
+                    <field name="endtime"/>
+                    <field name="schedule"/>
+                    <field name="room"/>
+                    <field name="examday"/>
+                    <field name="note"/>
                 </tree>
             </field>
         </record>
-        <record id="my_term_act" model="ir.actions.act_window">
-            <field name="name">Term</field>
+        <record id="my_course_act" model="ir.actions.act_window">
+            <field name="name">course</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="res_model">my.term</field>
+            <field name="res_model">my.course</field>
             <field name="view_mode">tree,form</field>
             <field name="help" type="html">
               <p class="oe_view_content_create">
-                Create your first term!
+                Create your first course!
               </p>
             </field>
         </record>
 
-        <menuitem id="my_term_menu"
-                  name="Term"
-                  action="my_term_act"
+        <menuitem id="my_course_menu"
+                  name="Course"
+                  action="my_course_act"
                   sequence="10"/>
     </data>
 </odoo>
