--- a/school_management/views/school.xml
+++ b/school_management/views/school.xml
@@ -5,39 +5,50 @@
                   sequence="10"/>
 
         <menuitem name="Department"
-                  id="department"
+                  id="department_parent"
                   parent="school_root"
+                  sequence="1"/>
+
+        <menuitem name="Department"
+                  id="department"
+                  parent="department_parent"
                   action="department_act"
                   sequence="1"/>
 
+        <menuitem name="Ology"
+                  id="ology"
+                  parent="department_parent"
+                  action="ology_act"
+                  sequence="2"/>
+
         <menuitem name="Major"
                   id="major"
-                  parent="school_root"
+                  parent="department_parent"
                   action="major_act"
-                  sequence="2"/>
+                  sequence="3"/>
 
         <menuitem name="Class"
                   id="class"
-                  parent="school_root"
+                  parent="department_parent"
                   action="class_act"
-                  sequence="3"/>
+                  sequence="4"/>
 
         <menuitem id="lecturer"
                   name="Lecturer"
                   parent="school_root"
                   action="lecturer_action"
-                  sequence="4"/>
+                  sequence="5"/>
 
         <menuitem id="student"
                   parent="school_root"
                   name="Student"
                   action="action_student"
-                  sequence="5"/>
-
-        <menuitem id="term"
-                  name="Term"
-                  parent="school_root"
-                  action="term_act"
                   sequence="6"/>
+
+<!--        <menuitem id="term"-->
+<!--                  parent="school_root"-->
+<!--                  name="Term"-->
+<!--                  action="term_act"-->
+<!--                  sequence="6"/>-->
     </data>
 </odoo>
