--- a/Nhom2_THERP/school_management/views/ology.xml
+++ b/Nhom2_THERP/school_management/views/ology.xml
@@ -17,7 +17,7 @@
                                 <field name="department_id"/>
                                 <field name="major_quantity"/>
                                 <field name="major_list" widget='one2many'>
-                                    <tree string="tree">
+                                    <tree >
                                         <field name="name"/>
                                         <field name="quantity_SV"/>
                                         <field name="quantity_GV"/>
