--- a/school/reports/report_student.xml
+++ b/school/reports/report_student.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <template id="report_student_idcard">
+        <template id="report_student">
             <t t-call="web.html_container">
                 <t t-foreach="docs" t-as="o">
                     <t t-call="web.external_layout">
                         <div class="page">
-                            <br/><br/>
-                            <br/><br/>
-                            <br/><br/>
+                            <br/>
+                            <br/>
+                            <br/>
+                            <br/>
+                            <br/>
+                            <br/>
                             <div style="max-height: 229px; width: 400px; border: 1px solid black;">
                                 <table width="100%">
                                     <tbody>
                                         <tr style="float:left">
-                                            <td>
-                                                <img class="image" alt="Student IDCard"
-                                                     t-att-src="'data:image/png;base64,%s' % to_text(res_company.logo)"
-                                                     style="max-width:2.5cm; margin:10px;"/>
-                                            </td>
                                             <td>
                                                 <p style="font-size:16px; font-weight: 600; margin: 10px 10px 0;">
                                                     Student ID Card
@@ -29,11 +27,6 @@
                                         <tr style="float: left;height: 2px;width: 100%;background-color: #2d4383;">
                                         </tr>
                                         <tr style="float:left; margin:10px 0;">
-                                            <td>
-                                                <img class="image"
-                                                     t-att-src="'data:image/png;base64,%s' % to_text(o.image_1920)"
-                                                     style="max-height:2.5cm; max-width:4cm; margin-left: 10px; margin-right: 10px; margin-bottom: 3px; border: 1px solid #ccc;"/>
-                                            </td>
                                             <td style="vertical-align: top;">
                                                 <div style="margin-left: 10px; margin-right: 10px; margin-bottom: 3px; font-size: 12px;">
                                                     <span style="font-weight:600">
@@ -42,19 +35,20 @@
                                                     <span t-field='o.name'/>
                                                     <br></br>
                                                     <span style="font-weight:600">
-                                                        Blood Group :
+                                                        Phone :
                                                     </span>
-                                                    <span t-field='o.blood_group'/>
+                                                    <span t-field='o.sdt'/>
+                                                    <br></br>
+                                                    <span style="font-weight:600">
+                                                        Email :
+                                                    </span>
+                                                    <span t-field='o.email'/>
                                                     <br></br>
                                                     <span style="font-weight:600">
                                                         BirthDate :
                                                     </span>
-                                                    <span t-field='o.birth_date' t-options="{'widget':'date'}"/>
+                                                    <span t-field='o.ngay_sinh' t-options="{'widget':'date'}"/>
                                                     <br></br>
-                                                    <span style="font-weight:600">
-                                                        Course :
-                                                    </span>
-                                                    <span class="student" t-field='o.course_detail_ids[0].course_id.name'/>
                                                 </div>
                                             </td>
                                         </tr>
