--- a/school/views/lecturer.xml
+++ b/school/views/lecturer.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="employee_search_form_view" model="ir.ui.view">
-            <field name="name">employee.search.form</field>
-            <field name="model">hr.employee</field>
-            <field name="arch" type="xml">
-                <search string="Employee">
-                    <field name="name"/>
-                    <field name="job"/>
-                    <field name="gender"/>
-                    <field name="degree"/>
-                    <field name="major_teaching"/>
-                    <field name="department_id"/>
-                </search>
-            </field>
-        </record>
+<!--        <record id="employee_search_form_view" model="ir.ui.view">-->
+<!--            <field name="name">employee.search.form</field>-->
+<!--            <field name="model">hr.employee</field>-->
+<!--            <field name="arch" type="xml">-->
+<!--                <search string="Employee">-->
+<!--                    <field name="name"/>-->
+<!--                    <field name="job"/>-->
+<!--                    <field name="gender"/>-->
+<!--                    <field name="degree"/>-->
+<!--                    <field name="major_teaching"/>-->
+<!--                    <field name="department_id"/>-->
+<!--                </search>-->
+<!--            </field>-->
+<!--        </record>-->
 
         <record id="hr_employee_form_view_inherit" model="ir.ui.view">
             <field name="name">hr.employee.form.view.inherit</field>
